@@ -7,10 +7,10 @@ auto.arima(x, d=NA, D=NA, max.p=5, max.q=5,
      max.P=2, max.Q=2, max.order=5, max.d=2, max.D=1, 
      start.p=2, start.q=2, start.P=1, start.Q=1, 
      stationary=FALSE, seasonal=TRUE,
-     ic=c("aicc","aic", "bic"), stepwise=TRUE, trace=FALSE,
+     ic=c("aicc", "aic", "bic"), stepwise=TRUE, trace=FALSE,
      approximation=(length(x)>100 | frequency(x)>12), xreg=NULL,
      test=c("kpss","adf","pp"), seasonal.test=c("ocsb","ch"),
-     allowdrift=TRUE, lambda=NULL, parallel=FALSE, num.cores=2)
+     allowdrift=TRUE, allowmean=TRUE, lambda=NULL, parallel=FALSE, num.cores=2)
 }
 
 \arguments{
@@ -38,6 +38,7 @@ auto.arima(x, d=NA, D=NA, max.p=5, max.q=5,
 \item{test}{Type of unit root test to use. See \code{\link{ndiffs}} for details.}
 \item{seasonal.test}{This determines which seasonal unit root test is used. See \code{\link{nsdiffs}} for details.}
 \item{allowdrift}{If \code{TRUE}, models with drift terms are considered.}
+\item{allowmean}{If \code{TRUE}, models with a non-zero mean are considered.}
 \item{lambda}{Box-Cox transformation parameter. Ignored if NULL. Otherwise, data transformed before model is estimated.}
 \item{parallel}{If \code{TRUE} and \code{stepwise = FALSE}, then the specification search is done in parallel. This can give a significant speedup on mutlicore machines.}
 \item{num.cores}{Allows the user to specify the amount of parallel processes to be used if \code{parallel = TRUE} and \code{stepwise = FALSE}. If \code{NULL}, then the number of logical cores is automatically detected and all available cores are used.}
